WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138053
REGRESSION(
r174877
): WebProcess sends an empty Cookies HTTP header
https://bugs.webkit.org/show_bug.cgi?id=138053
Summary
REGRESSION(r174877): WebProcess sends an empty Cookies HTTP header
Alexey Proskuryakov
Reported
2014-10-24 12:42:03 PDT
We now get an empty string instead of a null one, so we add a Cookies header field. This breaks several tests on Yosemite: http/tests/navigation/image-load-in-unload-handler.html http/tests/navigation/ping-cross-origin.html http/tests/navigation/ping-same-origin.html
Attachments
proposed fix
(1.48 KB, patch)
2014-10-24 12:44 PDT
,
Alexey Proskuryakov
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-10-24 12:44:59 PDT
Created
attachment 240427
[details]
proposed fix
Chris Dumez
Comment 2
2014-10-24 13:11:31 PDT
Comment on
attachment 240427
[details]
proposed fix r=me, thanks for fixing.
Alexey Proskuryakov
Comment 3
2014-10-24 13:23:42 PDT
Committed <
http://trac.webkit.org/r175175
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug